@@ -282,7 +282,7 @@ public class EnvVars extends TreeMap<String, String> {
             }
 
             // if not, cut the reference to the first one.
-            cutCycleAt(cycle.get(0), cycle);
+            cutCycleAt(cycle.getFirst(), cycle);
         }
 
         /**
